<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/bg"
                android:padding="16dp"
                android:layout_height="match_parent"
                tools:context=".ui.wizard.pages.Page2">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">
                <TextView
                        android:id="@+id/tvMeterVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/meterVendor"/>

                <RadioGroup
                        android:id="@+id/rgMeterVendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbMeterVendor1"
                            android:layout_width="wrap_content"
                            android:tag="meterVendorOption"
                            android:layout_height="wrap_content"
                            android:text="@string/meterVendorOption3"/>

                    <RadioButton
                            android:id="@+id/rbMeterVendor2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="meterVendorOption"
                            android:text="@string/meterVendorOption2"/>

                    <RadioButton
                            android:id="@+id/rbMeterVendor3"
                            android:layout_width="wrap_content"
                            android:tag="meterVendorOption"
                            android:layout_height="wrap_content"
                            android:text="@string/meterVendorOption1"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">
                <TextView
                        android:id="@+id/tvMeterState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:text="@string/meterState"/>

                <RadioGroup
                        android:id="@+id/rgMeterState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbrgMeterState1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="meterStateOption"
                            android:text="@string/meterStateOption3"/>

                    <RadioButton
                            android:id="@+id/rbMeterState2"
                            android:tag="meterStateOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meterStateOption2"/>

                    <RadioButton
                            android:id="@+id/rbMeterState3"
                            android:tag="meterStateOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meterStateOption1"/>
                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                        android:id="@+id/tvBuildingType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:text="@string/buildingType"/>
                <RadioGroup
                        android:id="@+id/rgBuildingType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbBuildingType1"
                            android:tag="buildingTypeOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingTypeOption3"/>

                    <RadioButton
                            android:id="@+id/rbBuildingType2"
                            android:layout_width="wrap_content"
                            android:tag="buildingTypeOption"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingTypeOption2"/>

                    <RadioButton
                            android:id="@+id/rbBuildingType3"
                            android:tag="buildingTypeOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingTypeOption1"/>
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                        android:id="@+id/tvBuildingUsage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:text="@string/buildingUsage"/>
                <RadioGroup
                        android:id="@+id/rgBuildingUsage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbBuildingUsage1"
                            android:tag="buildingUsageOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingUsageOption3"/>

                    <RadioButton
                            android:id="@+id/rbBuildingUsage2"
                            android:tag="buildingUsageOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingUsageOption2"/>

                    <RadioButton
                            android:id="@+id/rbBuildingUsage3"
                            android:tag="buildingUsageOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buildingUsageOption1"/>
                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                        android:id="@+id/tvStreetType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:text="@string/streetType"/>
                <RadioGroup
                        android:id="@+id/rgStreetType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbStreetType1"
                            android:tag="streetTypeOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streetTypeOption3"/>

                    <RadioButton
                            android:id="@+id/rbStreetType2"
                            android:tag="streetTypeOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streetTypeOption2"/>

                    <RadioButton
                            android:id="@+id/rbStreetType3"
                            android:tag="streetTypeOption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streetTypeOption1"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                        android:id="@+id/tvNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:text="@string/notes"/>
                <RadioGroup
                        android:id="@+id/rgNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                    <RadioButton
                            android:id="@+id/rbNotes1"
                            android:drawableRight="@drawable/ic_organization"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:id="@+id/rbNotes2"
                            android:layout_width="wrap_content"
                            android:drawableRight="@drawable/ic_land"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:id="@+id/rbNotes3"
                            android:drawableRight="@drawable/ic_mosq"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <RadioButton
                            android:id="@+id/rbNotes4"
                            android:drawableRight="@drawable/ic_hospital"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <RadioButton
                            android:id="@+id/rbNotes5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_water_drop"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>