<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.wizard.pages.Page3">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/meter_owner_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputOwnerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/meter_owner_phone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOwnerPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputOwnerId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/meter_owner_national_id">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOwnerId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputOldMeterNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/old_meter_number">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOldMeterNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputOldMeterReadings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/old_meter_readings">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtOldMeterReadings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputElectricityMeterNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/electricity_meter_number">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtElectricityMeterNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_1">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_2">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_3">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_4">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_5">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_6">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_7">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_8">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_9">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCustom10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/custom_10">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCustom10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>